# ai-agent

./: .gitignore  LICENSE  Makefile  README.md  prd.md  prd_test.md  pyproject.toml  report.md  test_agent_eval.py  test_ai_agent_integration.py  test_debug_runner.py  test_mock_client.py  test_simple_eval.py  test_simple_integration.py
.github/workflows/: ci.yml
config/: config.yaml
data/ai_agent_test/: integration_report.md
data/eval_test/: report.md  simple_report.md
data/simple_test/: eval_run_20250907_202209.jsonl  eval_run_20250907_202909.jsonl  simple_integration_report.md
notebooks/: demo_analysis.ipynb
scripts/: run_demo.py
src/: main.py
src/agent_eval/: README.md  __init__.py  analyzer.py  cli.py  client.py  config.py  evaluator.py  prd_eval.md  runner.py  schema.py  simple_runner.py  storage.py  utils.py
src/agent_eval/cases/: loader.py  sample_cases.jsonl
src/ai_agent/: __init__.py  agent.py  analyzer.py  database.py  logger.py  memory_db.py  model.py  performance.py  planner.py  tools.py  trajectory.py  visualizer.py
src/ai_agent/tools/: __init__.py  base.py  calculator.py  file.py  memory_db.py  memory_db_manager.py  python_code.py  web_search.py
src/config/: config.yaml
src/tests/: README.md  conftest.py  run_tests.py
src/tests/integration/: test_single_run.py
src/tests/unit/: test_agent.py  test_model.py  test_performance.py  test_tools.py
tests/: test_agent.py  test_model.py  test_tools.py
